add Bon Achat/Vente Reglement features